--- a/flashlight/AndroidManifest.xml
+++ b/flashlight/AndroidManifest.xml
@@ -9,14 +9,13 @@
     <uses-feature android:name="android.hardware.camera" android:required="true"/>
     <uses-feature android:required="true" android:name="android.hardware.camera.flash"/>
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
-    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" android:debuggable="true">
         <activity
             android:label="@string/app_name"
-            android:name=".FlashlightActivity" >
+            android:name=".FlashlightActivity" android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
