--- a/flashlight/AndroidManifest.xml
+++ b/flashlight/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/flashlight"
         android:label="@string/app_name" android:debuggable="true">
         <activity
             android:label="@string/app_name"
