--- a/flashlight/AndroidManifest.xml
+++ b/flashlight/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.micronixsolutions.flashlight"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.1" >
 
     <uses-sdk android:minSdkVersion="13" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -12,7 +12,7 @@
 
     <application
         android:icon="@drawable/flashlight"
-        android:label="@string/app_name" android:debuggable="true">
+        android:label="@string/app_name" android:debuggable="false">
         <activity
             android:label="@string/app_name"
             android:name=".FlashlightActivity" android:configChanges="keyboardHidden|orientation|screenSize">
